[package]
name = "rust_httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "3", features = ["derive"] } # 命令行解析
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.25.0", features = ["full"] }
syntect = "4"
